nginx-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-np
  namespace: front-ns
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30777
